--- a/02_transformer/transformer.ipynb
+++ b/02_transformer/transformer.ipynb
@@ -1,290 +1,109 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e5d6f36d",
-   "metadata": {},
-   "source": [
-    "# Пока не доделал, но я в процессе"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7d5bc7b",
-   "metadata": {},
-   "source": [
-    "### Transformer for translation task\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "9ab35350",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6bdd382",
-   "metadata": {},
-   "source": [
-    "### Подготовка данных\n",
-    "\n",
-    "Будем решать задачу машинного перевода с русского языка на английский. В качестве модели по архитектуре трансформера. Данные для обучения можно загрузить [здесь](https://www.manythings.org/anki/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "ff43725a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATASET_PATH = \"data/rus-eng/rus.txt\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "80457ab5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>eng</th>\n",
-       "      <th>rus</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Go.</td>\n",
-       "      <td>Марш!</td>\n",
-       "      <td>CC-BY 2.0 (France) Attribution: tatoeba.org #2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Go.</td>\n",
-       "      <td>Иди.</td>\n",
-       "      <td>CC-BY 2.0 (France) Attribution: tatoeba.org #2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Go.</td>\n",
-       "      <td>Идите.</td>\n",
-       "      <td>CC-BY 2.0 (France) Attribution: tatoeba.org #2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Hi.</td>\n",
-       "      <td>Здравствуйте.</td>\n",
-       "      <td>CC-BY 2.0 (France) Attribution: tatoeba.org #5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Hi.</td>\n",
-       "      <td>Привет!</td>\n",
-       "      <td>CC-BY 2.0 (France) Attribution: tatoeba.org #5...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           eng            rus  \\\n",
-       "sample_id                       \n",
-       "0          Go.          Марш!   \n",
-       "1          Go.           Иди.   \n",
-       "2          Go.         Идите.   \n",
-       "3          Hi.  Здравствуйте.   \n",
-       "4          Hi.        Привет!   \n",
-       "\n",
-       "                                                 description  \n",
-       "sample_id                                                     \n",
-       "0          CC-BY 2.0 (France) Attribution: tatoeba.org #2...  \n",
-       "1          CC-BY 2.0 (France) Attribution: tatoeba.org #2...  \n",
-       "2          CC-BY 2.0 (France) Attribution: tatoeba.org #2...  \n",
-       "3          CC-BY 2.0 (France) Attribution: tatoeba.org #5...  \n",
-       "4          CC-BY 2.0 (France) Attribution: tatoeba.org #5...  "
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(DATASET_PATH, sep = \"\\t\")\n",
-    "df.index.name = \"sample_id\"\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "64de60a6",
-   "metadata": {},
-   "source": [
-    "Для начала нужно убрать все знаки пунктуации и столбец с описанием, а затем каждое слово превратить в числовой вектор."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "d12a7de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns = \"description\", inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5cf50e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69d92054",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2827ef08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b844117b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "775c67ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "fc300a44",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "\n",
     "from typing import Tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 154,
    "id": "6fd3f0ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Attention3D(torch.nn.Module):\n",
-    "    def __init__(self, n_features):\n",
+    "    def __init__(self, n_features: int, masked: bool = False) -> None:\n",
     "        super(Attention3D, self).__init__()\n",
     "\n",
     "        self.query, self.key, self.value = [\n",
     "            torch.nn.Linear(n_features, n_features) \n",
     "            for _ in range(3)\n",
     "        ]\n",
-    "\n",
+    "        \n",
+    "        self.masked = masked\n",
     "        self.softmax = torch.nn.Softmax(dim = 1)\n",
     "\n",
-    "    def forward(self, input):\n",
+    "    def forward(self, input: torch.Tensor, K_input: torch.Tensor = None, V_input: torch.Tensor = None) -> torch.Tensor:\n",
     "        context_length, batch_size, n_features = input.shape\n",
+    "        \n",
+    "        K_context, _, _ = K_input.shape if K_input is not None else input.shape\n",
+    "        V_context, _, _ = V_input.shape if V_input is not None else input.shape\n",
+    "            \n",
     "        output = input.clone().detach()\n",
+    "        K_output = torch.Tensor(K_context, batch_size, n_features)\n",
+    "        V_output = torch.Tensor(V_context, batch_size, n_features)\n",
     "        \n",
     "        for i in range(batch_size):\n",
     "            input_2d = output[:, i: i+1, :].clone().detach().reshape(context_length, n_features)\n",
-    "            Q, K, V = self.query(input_2d), self.key(input_2d), self.value(input_2d)\n",
+    "            Q = self.query(input_2d)\n",
+    "            \n",
+    "            if K_input is None:\n",
+    "                K = self.key(input_2d)\n",
+    "            else:\n",
+    "                K = K_input[:, i: i+1, :].clone().detach().reshape(K_context, n_features)\n",
+    "                \n",
+    "            if V_input is None:\n",
+    "                V = self.value(input_2d)\n",
+    "            else:\n",
+    "                V = V_input[:, i: i+1, :].clone().detach().reshape(V_context, n_features)\n",
     "\n",
-    "            attention_2d = self.softmax( (Q @ K.T) / n_features**0.5) @ V\n",
+    "            I = Q @ K.T\n",
+    "            if self.masked:\n",
+    "                for i in range(len(I)):\n",
+    "                    I[i][i+1:] = -torch.inf\n",
+    "                \n",
+    "            attention_2d = self.softmax( I / n_features**0.5) @ V\n",
     "            output[:, i: i+1, :] = attention_2d.reshape(context_length, 1, n_features)\n",
+    "            \n",
+    "            K_output[:, i: i+1, :] = K.reshape(K_context, 1, n_features)\n",
+    "            V_output[:, i: i+1, :] = V.reshape(V_context, 1, n_features)\n",
     "        \n",
-    "        return output"
+    "        return output, (K_output, V_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "id": "49287c60",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Encoder(torch.nn.Module):\n",
     "    \n",
-    "    def __init__(self, batch_sample: torch.Tensor) -> None:\n",
+    "    def __init__(self, batch_sample: torch.Tensor, final_module: bool = False) -> None:\n",
     "        super(Encoder, self).__init__()\n",
     "        \n",
     "        context_length, batch_size, n_features = batch_sample.shape\n",
     "        self.layer_norm = torch.nn.LayerNorm(normalized_shape = n_features)\n",
     "        \n",
-    "        self.attention_layer = Attention3D(n_features)\n",
+    "        self.attention_layer = Attention3D(n_features, masked = False)\n",
     "        self.feed_forward_layer = torch.nn.Sequential(\n",
     "            torch.nn.Linear(n_features, n_features * 2),\n",
     "            torch.nn.Linear(n_features * 2, n_features)\n",
     "        )\n",
     "        \n",
+    "        self.final_module = final_module\n",
+    "        \n",
     "    def forward(self, input: torch.Tensor) -> torch.Tensor:\n",
-    "        attention_output = self.attention_layer(input)\n",
+    "        attention_output, KV_tuple = self.attention_layer(input)\n",
     "        norm_attention_output = self.layer_norm(input + attention_output)\n",
     "        \n",
     "        feed_forward_output = self.feed_forward_layer(norm_attention_output)\n",
     "        encoder_output = self.layer_norm(norm_attention_output + feed_forward_output)\n",
     "        \n",
-    "        return encoder_output"
+    "        return encoder_output if not self.final_module else KV_tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 156,
    "id": "5a42c7bf",
    "metadata": {},
    "outputs": [],
@@ -297,45 +116,130 @@
     "        context_length, batch_size, n_features = batch_sample.shape\n",
     "        self.layer_norm = torch.nn.LayerNorm(normalized_shape = n_features)\n",
     "        \n",
+    "        self.attention_layer = Attention3D(n_features, masked = True)\n",
+    "        self.cross_attention_layer = Attention3D(n_features, masked = False)\n",
     "        \n",
-    "    def forward(self, input: torch.Tensor) -> torch.Tensor:\n",
-    "        pass"
+    "        self.feed_forward_layer = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(n_features, n_features * 2),\n",
+    "            torch.nn.Linear(n_features * 2, n_features)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, input: torch.Tensor, K: torch.Tensor, V: torch.Tensor) -> torch.Tensor:\n",
+    "        masked_attention_output, _ = self.attention_layer(input)\n",
+    "        norm_attention_output = self.layer_norm(input + masked_attention_output)\n",
+    "        \n",
+    "        cross_attention_output, _ = self.cross_attention_layer(norm_attention_output, K, V)\n",
+    "        norm_cross_attention_output = self.layer_norm(norm_attention_output + cross_attention_output)\n",
+    "        \n",
+    "        feed_forward_output = self.feed_forward_layer(norm_cross_attention_output)\n",
+    "        decoder_output = self.layer_norm(norm_cross_attention_output + feed_forward_output)\n",
+    "        \n",
+    "        return decoder_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "3535ae2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderStack(torch.nn.Sequential):\n",
+    "    def __init__(self, *args, **kwargs) -> None:\n",
+    "        super(DecoderStack, self).__init__(*args, **kwargs)\n",
+    "        \n",
+    "    def forward(self, input, *args, **kwargs):\n",
+    "        for i, module in enumerate(self):\n",
+    "            input = module(input, *args, **kwargs)\n",
+    "        return input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "id": "748572e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Transformer(torch.nn.Module):\n",
     "    \n",
-    "    def __init__(self, batch_sample: torch.Tensor, stack_size: int) -> None:\n",
-    "        super(Transformer, self).__init()\n",
+    "    def __init__(self, batch_sample: torch.Tensor, stack_size: int, vocab_size: int) -> None:\n",
+    "        super(Transformer, self).__init__()\n",
     "        \n",
-    "        self.encoders, self.decoders = [torch.nn.Sequential() for _ in range(2)]\n",
+    "        context_length, batch_size, n_features = batch_sample.shape\n",
+    "        self.encoders, self.decoders = torch.nn.Sequential(), DecoderStack()\n",
     "        \n",
-    "        for _ in range(stack_size):\n",
-    "            self.encoders.append(Encoder(batch_sample))\n",
+    "        for i in range(stack_size):\n",
+    "            is_final_encoder = i == stack_size - 1\n",
+    "            self.encoders.append(Encoder(batch_sample, is_final_encoder))\n",
     "            self.decoders.append(Decoder(batch_sample))\n",
     "            \n",
-    "    def _exctract_encoder_key_value(self, encoder: Encoder) -> Tuple[torch.Tensor, torch.Tensor]:\n",
-    "        K = list(encoder.attention_layer.key.parameters())[0].data\n",
-    "        V = list(encoder.attention_layer.value.parameters())[0].data\n",
-    "        return K, V\n",
+    "        self.linear = torch.nn.Linear(n_features, vocab_size)\n",
+    "        self.softmax = torch.nn.Softmax(dim = 1)\n",
     "            \n",
-    "    def forward(self, input: torch.Tensor) -> torch.Tensor:\n",
+    "    def forward(self, encoder_input: torch.Tensor, decoder_input: torch.Tensor) -> torch.Tensor:\n",
     "        \n",
-    "        # 1. Forward input through encoders stack\n",
-    "        self.encoders(input)\n",
+    "        # 1. Forward input through encoders stack. Last encoder contains needed K,V tensors\n",
+    "        K, V = self.encoders(encoder_input)\n",
     "        \n",
-    "        # 2. Now, last encoder contains needed K,V tensors\n",
+    "        decoder_output = self.decoders(decoder_input, K, V)\n",
+    "        word_probabilities = self.softmax(self.linear(decoder_output))\n",
     "        \n",
-    "        # 3. Get K,V tensors for decoder cross attention sublayer\n",
-    "        K, V = self._exctract_encoder_key_value(self.encoders[-1])      # requires_grad ?\n",
-    "        \n",
-    "        self.decoders()"
+    "        return word_probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "64103710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bs = torch.rand(25, 1, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "c25849b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr = Transformer(bs, stack_size = 3, vocab_size = 2048)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "f9aecee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "et = torch.rand(25, 1, 8)\n",
+    "dt = torch.rand(30, 1, 8)\n",
+    "\n",
+    "r = tr.forward(et, dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "a8dbf387",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([25, 1, 2048])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.shape"
    ]
   }
  ],
