--- a/10_code_completion/research.ipynb
+++ b/10_code_completion/research.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Tabnine\n",
     "\n",
-    "<img src=\"images/tabnine.jpg\" width=\"400\">\n",
+    "<img src=\"10_code_completion/images/tabnine.jpg\" width=\"400\">\n",
     "\n",
     "---\n",
     "\n",
